--- a/styleCSS/_layout/_footer.scss
+++ b/styleCSS/_layout/_footer.scss
@@ -3,8 +3,17 @@
 ----------------------------------------------------------------------------------  */
 
 footer{
+    width: 100%;
     background-color:var(--noir);
     color:var(--blanc);
     padding:5rem;
     text-align: center;
+    font-size: 1.5rem;
+    line-height: 3rem;
+}
+
+@media only screen and (min-width:740px){
+    footer{
+        width:100%
+    }
 }
