--- a/styleCSS/_layout/_pub.scss
+++ b/styleCSS/_layout/_pub.scss
@@ -2,18 +2,63 @@
 -----------------------Publicité----------------------------------------------
 ----------------------------------------------------------------------------------  */
 
-section.article{
-
-    & img.pub {
-        width: 40vw;
-        display: block;
-        margin: 6em auto 6em auto;
+article{
+    & .pub1{
+        margin: 8rem auto;
+        background-color: grey;
+        width:20rem;
+        padding:12rem 3rem;
+        color:var(--blanc);
+        font-size:2rem;
+        text-align: center;
         
     }
 
-    & div img.pub3{
-        width: 40vw;
+
+    & .pub2{
+        background-color: grey;
+        padding:8rem 3rem;
+        width:20rem;
+        margin:8rem auto;
+        color:var(--blanc);
+        font-size:2rem;
+        text-align: center;
+        
+    }
+
+    & .pub3{
+        background-color: grey;
+        width:20rem;
+        padding:8rem 3rem;
+        margin:auto;
+        color:var(--blanc);
+        font-size:2rem;
+        text-align: center;
         position: absolute;
-        top:287.5em;
+        top:234rem
+    }
+    
+}
+
+@include rwd-min-width(740){
+    article{
+        & .pub1 {
+            width:15rem;
+            height:20rem;
+            margin:0 0 3rem 4rem;
+            position: relative;
+            top:1rem;
+        
+        }
+        & .pub2 {
+            width:15rem;
+            margin-left:4rem;
+            position: absolute;
+        }
+        & .pub3 {
+            width:15rem;
+            margin-left:4rem;
+        }
+        
     }
 }
