--- a/styleCSS/style.css
+++ b/styleCSS/style.css
@@ -93,9 +93,9 @@ nav {
       -ms-flex-align: start;
           align-items: flex-start;
   width: 70%;
-  height: 100vh;
+  height: 100%;
   z-index: 1500;
-  background-color: black;
+  background-color: var(--noir);
   color: var(--blanc);
   position: fixed;
 }
@@ -115,7 +115,7 @@ nav ul {
       -ms-flex-align: start;
           align-items: flex-start;
   width: 100%;
-  height: 60%;
+  height: 100%;
 }
 
 nav li {
@@ -132,21 +132,17 @@ nav li {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  width: 100%;
   padding: 1.6em;
   color: var(--blanc);
   border-bottom: 1px solid var(--blanc);
-}
-
-nav li img {
-  width: 4rem;
-  color: var(--blanc);
-  position: relative;
-  top: 3em;
+  margin-left: 0;
+  text-align: left;
 }
 
 i {
   color: var(--orange);
-  font-size: 6rem;
+  font-size: 5rem;
   float: right;
   padding: 0.8rem 2rem 0 0;
   position: fixed;
@@ -192,26 +188,41 @@ header {
   background-image: url(../foodiesImg/headerVrai-assets/photo-480.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  width: 100vw;
-  height: 30vh;
+  width: 100%;
+  height: 20rem;
 }
 
 header img {
-  width: 60vw;
+  width: 60%;
   display: block;
   margin: auto;
   position: relative;
-  top: 10em;
+  top: 7em;
+}
+
+@media only screen and (min-width: 740px) {
+  header {
+    height: 35vh;
+  }
 }
 
 /*------------------------------------------------------------------------------- 
 -----------------------Footer----------------------------------------------
 ----------------------------------------------------------------------------------  */
 footer {
+  width: 100%;
   background-color: var(--noir);
   color: var(--blanc);
   padding: 5rem;
   text-align: center;
+  font-size: 1.5rem;
+  line-height: 3rem;
+}
+
+@media only screen and (min-width: 740px) {
+  footer {
+    width: 100%;
+  }
 }
 
 /*------------------------------------------------------------------------------- 
@@ -219,36 +230,37 @@ footer {
 ----------------------------------------------------------------------------------  */
 section.article h3 {
   margin: 0rem 3rem;
-  font-size: 3rem;
+  font-size: 2rem;
   color: var(--orange);
   padding-bottom: 0.5em;
   text-align: center;
-  line-height: 5rem;
+  line-height: 3rem;
 }
 
 section.article h4 {
-  background-color: white;
-  margin: 0 10rem;
-  padding: 4rem 1rem;
-  border: 2px solid green;
+  background-color: var(--blanc);
+  margin: 0 10rem 3rem;
+  padding: 1rem 1rem;
+  border: 2px solid var(--vert);
   font-size: 2rem;
   text-align: center;
-  line-height: 5rem;
+  line-height: 3rem;
   position: relative;
-  bottom: 7rem;
+  bottom: 4rem;
 }
 
 section.article img.recette {
-  width: 100vw;
+  width: 100%;
 }
 
 article.principal > .entete {
-  background-color: yellowgreen;
-  color: white;
+  background-color: var(--vert);
+  color: var(--blanc);
   margin: 3rem 0 2rem;
   padding: 1rem 0;
   text-align: center;
   font-weight: 100;
+  font-size: 1.5rem;
 }
 
 article.principal > section.titre {
@@ -256,7 +268,7 @@ article.principal > section.titre {
 }
 
 article.principal > section.titre > h2 {
-  font-size: 4em;
+  font-size: 3rem;
   font-weight: 300;
   line-height: 1em;
 }
@@ -266,12 +278,16 @@ article.principal > section.titre > p {
   padding-top: 0,5em;
 }
 
+article.principal > .manShape {
+  display: none;
+}
+
 article.principal > .manShapeMobile {
   display: block;
   margin-left: auto;
   margin-right: auto;
   padding: 5em 0;
-  width: 50vw;
+  width: 50%;
 }
 
 article.principal > p {
@@ -310,7 +326,7 @@ article.principal > p {
 }
 
 .bonheur figure img {
-  width: 80vw;
+  width: 100vw;
   display: block;
 }
 
@@ -335,16 +351,16 @@ article.recette {
 }
 
 article.recette a p {
-  background-color: green;
-  color: white;
+  background-color: var(--vert);
+  color: var(--blanc);
   text-align: center;
-  padding: 2rem;
-  margin: 0 17rem 5rem;
+  padding: 1rem;
+  margin: 0 13rem 5rem;
   border-radius: 7px;
 }
 
 article.recette p {
-  font-size: 1.1rem;
+  font-size: 1rem;
   margin: -3rem 3rem 1rem 3rem;
   text-align: justify;
   padding-bottom: 3rem;
@@ -354,19 +370,129 @@ article.recette > p {
   margin: 0 3rem;
 }
 
+@media only screen and (min-width: 739px) {
+  article.principal > .entete {
+    margin: 3rem 2rem 3rem 2rem;
+    padding: 1.5rem 0;
+    font-size: 1.5rem;
+  }
+  article.principal > .manShapeMobile {
+    display: none;
+  }
+  article.principal > .manShape {
+    display: block;
+    width: 30vw;
+    margin: 2rem;
+  }
+  .origine {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    margin-top: 6em;
+  }
+  .origine p {
+    width: 90%;
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+  .bonheur {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    margin: 1rem 3rem 2rem;
+  }
+  .bonheur p {
+    width: 100%;
+    text-align: justify;
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+  .bonheur figure p {
+    font-size: 1rem;
+  }
+  .recette {
+    display: block;
+  }
+  .recette .premierP {
+    font-size: 1.5rem;
+    line-height: 2rem;
+    width: 50%;
+    margin: 0;
+  }
+}
+
 /*-------------------------10------------------------------------------------------ 
 -----------------------Publicité----------------------------------------------
 ----------------------------------------------------------------------------------  */
-section.article img.pub {
-  width: 40vw;
-  display: block;
-  margin: 6em auto 6em auto;
+article .pub1 {
+  margin: 8rem auto;
+  background-color: grey;
+  width: 20rem;
+  padding: 12rem 3rem;
+  color: var(--blanc);
+  font-size: 2rem;
+  text-align: center;
 }
 
-section.article div img.pub3 {
-  width: 40vw;
+article .pub2 {
+  background-color: grey;
+  padding: 8rem 3rem;
+  width: 20rem;
+  margin: 8rem auto;
+  color: var(--blanc);
+  font-size: 2rem;
+  text-align: center;
+}
+
+article .pub3 {
+  background-color: grey;
+  width: 20rem;
+  padding: 8rem 3rem;
+  margin: auto;
+  color: var(--blanc);
+  font-size: 2rem;
+  text-align: center;
   position: absolute;
-  top: 287.5em;
+  top: 234rem;
+}
+
+@media (min-width: 740px) {
+  article .pub1 {
+    width: 15rem;
+    height: 20rem;
+    margin: 0 0 3rem 4rem;
+    position: relative;
+    top: 1rem;
+  }
+  article .pub2 {
+    width: 15rem;
+    margin-left: 4rem;
+    position: absolute;
+  }
+  article .pub3 {
+    width: 15rem;
+    margin-left: 4rem;
+  }
 }
 
 /*------------------------------------------------------------------------------- 
