--- a/styleCSS/_layout/_aside.scss
+++ b/styleCSS/_layout/_aside.scss
@@ -2,3 +2,6 @@
 -----------------------Aside----------------------------------------------
 ----------------------------------------------------------------------------------  */
 
+aside{
+    display: none;
+}
