--- a/styleCSS/_layout/_pub.scss
+++ b/styleCSS/_layout/_pub.scss
@@ -47,17 +47,21 @@ article{
             height:20rem;
             margin:0 0 3rem 4rem;
             position: relative;
-            top:1rem;
+            top: 3rem;
         
         }
         & .pub2 {
             width:15rem;
             margin-left:4rem;
             position: absolute;
+            right:3rem;
+            top:186rem;
         }
         & .pub3 {
             width:15rem;
             margin-left:4rem;
+            right:3rem;
+            top:219rem
         }
         
     }
