--- a/styleCSS/_layout/_pub.scss
+++ b/styleCSS/_layout/_pub.scss
@@ -35,10 +35,13 @@ article{
         font-size:2rem;
         text-align: center;
         position: absolute;
-        top:234rem
+        top:221rem
     }
     
 }
+/*----------------------------------------------------------------
+---------------------media:740------------------------------------
+----------------------------------------------------------------*/
 
 @include rwd-min-width(740){
     article{
@@ -55,14 +58,53 @@ article{
             margin-left:4rem;
             position: absolute;
             right:3rem;
-            top:186rem;
+            top:179.5rem;
         }
         & .pub3 {
             width:15rem;
             margin-left:4rem;
             right:3rem;
-            top:219rem
+            top:210rem
         }
         
     }
+}
+
+/*----------------------------------------------------------------
+---------------------media:1024------------------------------------
+----------------------------------------------------------------*/
+
+@include rwd-min-width(1024){
+        article{
+            
+            & .pub2 {
+                width: 12rem;
+                height: 12rem;
+                top:183rem;
+            }
+            & .pub3 {
+                width: 12rem;
+                height: 12rem;
+                top:208rem;
+            }
+            
+        }
+}
+/*----------------------------------------------------------------
+---------------------media:1600------------------------------------
+----------------------------------------------------------------*/
+@include rwd-min-width(1600){
+    article{
+        & .pub1 {
+            display: none;
+        }
+        & .pub2 {
+            display: none;
+        }
+        & .pub3 {
+            display: none;
+        }
+        
+    }
+
 }
