--- a/styleCSS/_layout/_footer.scss
+++ b/styleCSS/_layout/_footer.scss
@@ -6,9 +6,9 @@ footer{
     width: 100%;
     background-color:var(--noir);
     color:var(--blanc);
-    padding:5rem;
+    padding:3rem;
     text-align: center;
-    font-size: 1.5rem;
+    font-size: 1rem;
     line-height: 3rem;
     margin:0;
 
@@ -18,6 +18,9 @@ footer{
     }
 }
 
+/*----------------------------------------------------------------
+---------------------media:740------------------------------------
+----------------------------------------------------------------*/
 
 @include rwd-min-width(740){
     footer{
