--- a/styleCSS/_layout/_header.scss
+++ b/styleCSS/_layout/_header.scss
@@ -8,7 +8,7 @@ header{
     background-repeat: no-repeat;
     background-size:cover;
     width: 100%;
-    height: 20rem;
+    height: 16rem;
 
     & img{
         width: 60%;
@@ -19,9 +19,20 @@ header{
     }
 }
 
+/*----------------------------------------------------------------
+---------------------media:740------------------------------------
+----------------------------------------------------------------*/
 
 @media only screen and (min-width:740px){
     header{
-        height: 35vh;
+        background-image: url(../foodiesImg/header-assets/photo-740.jpg);
+        height: 25rem;
+    }
+}
+
+@media only screen and (min-width:1024px){
+    header{
+        background-image: url(../foodiesImg/header-assets/photo-1024.jpg);
+        height: 35rem;
     }
 }
