--- a/styleCSS/_layout/_navPrincipale.scss
+++ b/styleCSS/_layout/_navPrincipale.scss
@@ -5,7 +5,7 @@
 nav{
    
    @include flex(column,flex-start, flex-start);
-   width:70%;
+   width:100%;
    height: 100%;
    z-index: 1500;
    background-color:var(--noir);
@@ -19,13 +19,14 @@ nav{
          height: 100%;
         }
         & li{
-            @include flex(row,center,center);
+            @include flex(column,flex-start, flex-start);
             width: 100%;
             padding: 1.6em;
             color: var(--blanc);
             border-bottom: 1px solid var(--blanc);
             margin-left: 0;
             text-align: left;
+            font-size: 2rem;
         }
     }
     i{
